// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherInput.vue should allow custom blur events 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should allow custom focus events 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-input-content focused"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should clear input when clear-icon is clicked 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 16px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should not render a clear icon when the input doesn't have a value 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 16px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render a clear icon when clear has a value and input also has a value 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <a
          class="action-icon hide-when-disabled"
          data-ref-id="feather-form-element-clear"
          data-v-0de63cb2=""
          data-v-d1dfbdf8=""
          href="#"
          title="clear"
        >
          <svg
            aria-hidden="true"
            class="feather-icon"
            data-v-0aa06a12=""
            data-v-d1dfbdf8=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,17.55,13.43,12,19,6.4A1,1,0,1,0,17.58,5L12,10.58,6.42,5A1,1,0,0,0,5,6.42L10.6,12,5,17.6A1,1,0,0,0,5,19a1,1,0,0,0,.71.29,1,1,0,0,0,.71-.3L12,13.41,17.6,19a1,1,0,0,0,.71.29A1,1,0,0,0,19,19,1,1,0,0,0,19,17.55Z"
            />
          </svg>
        </a>
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render a maxlength attribute and character count when maxlength specified 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="5"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    <div
      class="feather-input-count"
      data-ref-id="feather-form-element-count"
    >
      4 / 5
    </div>
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input error input 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container error feather-input-content error"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 16px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          data-v-0aa06a12=""
          data-v-0de63cb2=""
          data-v-49fd357e=""
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
      data-v-51d97390=""
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input error input and has a value 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised error feather-input-content error"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          data-v-0aa06a12=""
          data-v-0de63cb2=""
          data-v-49fd357e=""
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
      data-v-51d97390=""
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input error input and has focus 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised focused error feather-input-content error focused"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          data-v-0aa06a12=""
          data-v-0de63cb2=""
          data-v-49fd357e=""
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
      data-v-51d97390=""
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input with a label 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 16px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input with a label and hint text 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 16px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <div
      class="feather-input-hint"
      data-ref-id="feather-form-element-hint"
      data-v-51d97390=""
    >
      hint text
    </div>
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input with a preset value 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised feather-input-content"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <div
      class="feather-input-hint"
      data-ref-id="feather-form-element-hint"
      data-v-51d97390=""
    >
      hint text
    </div>
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input with raised label when focused 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-input-content focused"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherInput.vue should render an input with raised label when focused and has a value 1`] = `
<div
  class="feather-input-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-input-content focused"
    data-v-0de63cb2=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-0de63cb2=""
    >
      <legend
        data-v-0de63cb2=""
      >
        label
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-0de63cb2=""
      for="feather-input-label"
      style="left: 12px;"
    >
      label
    </label>
    <div
      class="feather-input-wrapper"
      data-v-0de63cb2=""
    >
      <div
        class="prefix"
        data-v-0de63cb2=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="text"
      />
      
      <div
        class="post"
        data-v-0de63cb2=""
      >
        <!---->
        <!---->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-51d97390=""
    id="feather-input-description"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;
